webp billeder i bedste opløslighed

--- a/src/components/Anbefaling.astro
+++ b/src/components/Anbefaling.astro
@@ -21,7 +21,7 @@ const { navn, alder, link, anbimg, udtalelse, overskrift } = Astro.props;
 
 <style>
   .anbefalingboks {
-    background-image: url(/billeder/anbefalingboks.png);
+    background-image: url(/billeder/anbefalingboks.webp);
     background-size: cover;
     width: 80%;
     background-repeat: no-repeat;
