--- a/src/components/Begivenhed.astro
+++ b/src/components/Begivenhed.astro
@@ -30,7 +30,7 @@ if (error) {
 
 <style>
   .begivenhed {
-    background-image: url(/billeder/begivenhedboks.png);
+    background-image: url(/billeder/begivenhedboks.webp);
     background-size: cover;
     background-repeat: no-repeat;
     height: auto;
