--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -37,7 +37,7 @@
 
 <style>
   .footer {
-    background-image: url(/billeder/footerbaggrund.png);
+    background-image: url(/billeder/footerbaggrund.webp);
     background-repeat: no-repeat;
     background-size: cover;
     margin-top: 150px;
@@ -64,7 +64,7 @@
   }
 
   .facebook {
-    background-image: url('/billeder/footerboks.png');
+    background-image: url('/billeder/footerboks.webp');
     background-repeat: no-repeat;
     background-size: cover;
     margin-top: 20px;
