--- a/src/components/Tilmeld.astro
+++ b/src/components/Tilmeld.astro
@@ -18,7 +18,7 @@ const { holdnr, dag, holdnavn, tid } = Astro.props;
 
 <style>
   .holdnr {
-    background-image: url(/billeder/tilmeldingboks.png);
+    background-image: url(/billeder/tilmeldingboks.webp);
     background-size: contain;
     background-repeat: no-repeat;
     width: 160px;
