--- a/src/pages/felleskab.astro
+++ b/src/pages/felleskab.astro
@@ -27,12 +27,12 @@ import '../styles/fellesskab.css';
       <h1>FÆLLESSKAB</h1>
       <hr />
       <div class="hero">
-        <img src="/billeder/fellesskabhero.png" alt="heroimg" />
+        <img src="/billeder/fellesskabhero.webp" alt="heroimg" />
       </div>
       <div class="startfelles">
         <div>
           <h2>HVAD ER GOSPEL?</h2>
-          <img class="vector" src="/billeder/vectorsort.svg" alt="vector" />
+          <img class="vector" src="/billeder/vectorsort.webp" alt="vector" />
           <p class="fellesp">
             Du er kommet til det helt rigtige sted, hvis du har lyst til at synge gospel. I korene
             fokuserer vi på energi, glæde, fortolkning og indlevelse. Det frigør en dybtliggende
@@ -60,12 +60,12 @@ import '../styles/fellesskab.css';
       </div>
       <div class="billederullen">
         <div class="billederulle">
-          <img src="/billeder/rulle1.png" alt="rulle1" />
-          <img src="/billeder/rulle2.png" alt="rulle2" />
-          <img src="/billeder/rulle3.png" alt="rulle3" />
-          <img src="/billeder/rulle4.png" alt="rulle4" />
-          <img src="/billeder/rulle5.png" alt="rulle5" />
-          <img src="/billeder/rulle6.png" alt="rulle6" />
+          <img src="/billeder/rulle1.webp" alt="rulle1" />
+          <img src="/billeder/rulle2.webp" alt="rulle2" />
+          <img src="/billeder/rulle3.webp" alt="rulle3" />
+          <img src="/billeder/rulle4.webp" alt="rulle4" />
+          <img src="/billeder/rulle5.webp" alt="rulle5" />
+          <img src="/billeder/rulle6.webp" alt="rulle6" />
         </div>
       </div>
       <div class="odas">
@@ -83,7 +83,7 @@ import '../styles/fellesskab.css';
           navn="Agnete Emborg"
           alder="25 år"
           link="https://www.gospelnet.dk/artikler/gospel-giver-faellesskabsfoelelse/"
-          anbimg="/billeder/anbefaling1.png"
+          anbimg="/billeder/anbefaling1.webp"
           udtalelse="Jeg kom her sidste sæson uden at kende nogen overhovedet. Men lige så snart jeg kom ind, skulle man hilse på andre, og fortælle sit navn – dét synes jeg var fint"
           overskrift="Gospel giver fællesskabsfølelse"
         />
@@ -91,7 +91,7 @@ import '../styles/fellesskab.css';
           navn="Johanne Burkhave"
           alder="20 år"
           link="https://www.gospelnet.dk/artikler/gospel-giver-overskud/"
-          anbimg="/billeder/anbefaling2.png"
+          anbimg="/billeder/anbefaling2.webp"
           udtalelse="Gospel giver energi, overskud og glæde. Jeg læser bedst om tirsdagen, når jeg kommer hjem fra gospel."
           overskrift="Gospel giver overskud til læsningen"
         />
@@ -99,7 +99,7 @@ import '../styles/fellesskab.css';
           navn="Martin Køhler "
           alder="36 år"
           link="https://www.gospelnet.dk/artikler/kraft-og-styrke-i-at-synge/"
-          anbimg="/billeder/anbefaling3.png"
+          anbimg="/billeder/anbefaling3.webp"
           udtalelse="Det gør noget helt særligt at synge gospel - og dét at synge i det hele taget.  Det er en måde at udtrykke sig på. Jeg får fat i nogle følelser, som jeg ikke ellers udtrykker."
           overskrift="Der er kraft og styrke i at synge"
         />
@@ -107,13 +107,13 @@ import '../styles/fellesskab.css';
           navn="Lotte Nielsen"
           alder="49 år"
           link="https://www.gospelnet.dk/artikler/gospel-samler/"
-          anbimg="/billeder/anbefaling4.png"
+          anbimg="/billeder/anbefaling4.webp"
           udtalelse="Det er helt vidunderligt. Jeg bliver fuldstændig fyldt op af at synge Gospel."
           overskrift="Gospel samler folk på tværs af skel"
         />
       </div>
       <div class="hero">
-        <img src="/billeder/slutherofellesskab.png" alt="heroimg" />
+        <img src="/billeder/slutherofellesskab.webp" alt="heroimg" />
       </div>
       <Footer />
     </main>
