--- a/src/pages/tilmeld.astro
+++ b/src/pages/tilmeld.astro
@@ -56,7 +56,7 @@ import '../styles/tilmeld.css';
         <p>Tilmeld</p>
       </div>
       <div class="hero">
-        <img src="/billeder/tilmeldhero.png" alt="heroimg" />
+        <img src="/billeder/tilmeldhero.webp" alt="heroimg" />
       </div>
       <Footer />
     </main>
