alle billeder med

--- a/src/pages/felleskab.astro
+++ b/src/pages/felleskab.astro
@@ -32,7 +32,7 @@ import '../styles/fellesskab.css';
       <div class="startfelles">
         <div>
           <h2>HVAD ER GOSPEL?</h2>
-          <img class="vector" src="/billeder/vectorsort.webp" alt="vector" />
+          <img class="vector" src="/billeder/vectorsort.svg" alt="vector" />
           <p class="fellesp">
             Du er kommet til det helt rigtige sted, hvis du har lyst til at synge gospel. I korene
             fokuserer vi på energi, glæde, fortolkning og indlevelse. Det frigør en dybtliggende
