--- a/src/components/Anbefaling.astro
+++ b/src/components/Anbefaling.astro
@@ -69,4 +69,8 @@ const { navn, alder, link, anbimg, udtalelse, overskrift } = Astro.props;
     font-family: 'Fira Sans', sans-serif;
     font-weight: 700;
   }
+
+  .anbefalingboks a:hover {
+    text-decoration: underline;
+  }
 </style>
