--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,6 +12,9 @@ import MenuScript from './MenuScript.astro';
     <nav>
       <ul class="menu">
         <li>
+          <a href="/">Hjem</a>
+        </li>
+        <li>
           <a href="/felleskab">Fælleskab</a>
         </li>
         <li><a href="/kalender">Kalender</a></li>
