--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -67,9 +67,7 @@ import '../styles/index.css';
             kvinder, der altid er markant i overtal.
           </p>
           <h3>HANS CHRISTIAN JOCHIMSEN</h3>
-          <a href="https://www.gospelnet.dk/hans-christian-jochimsen/"
-            >- Læs mere om Hans Christian Jochimsen
-          </a>
+          <a href="https://www.gospelnet.dk/hans-christian-jochimsen/">- Læs mere om ham her </a>
         </div>
       </div>
       <h2>HOLDOVERSIGT</h2>
