--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -24,6 +24,8 @@ main {
 .gospelikbh img {
   width: 400px;
   margin: 25px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .gospelikbh p {
@@ -48,7 +50,7 @@ main {
   background-image: url(/billeder/hansbaggrund.webp);
   background-repeat: no-repeat;
   background-size: cover;
-  margin: 50px;
+  margin: 20px;
   width: auto;
   height: auto;
   padding: 20px;
@@ -89,6 +91,10 @@ main {
   font-size: small;
 }
 
+.hanscjafsnit a:hover {
+  text-decoration: underline;
+}
+
 .holdene :last-child {
   margin-top: 30px;
 }
@@ -115,6 +121,10 @@ main {
 .informationer p {
   margin-left: 25px;
   font-family: 'Fira Sans', sans-serif;
+}
+
+.gospelikbh a:hover {
+  text-decoration: underline;
 }
 
 @media screen and (min-width: 750px) {
