--- a/src/components/Begivenhed.astro
+++ b/src/components/Begivenhed.astro
@@ -38,6 +38,7 @@ if (error) {
     margin-left: auto;
     margin-right: auto;
     padding: 20px;
+    margin-bottom: 50px;
   }
 
   .begivenhed img {
@@ -95,7 +96,7 @@ if (error) {
     .gridkalender {
       display: grid;
       grid-template-columns: 1fr 1fr;
-      gap: 20px;
+      gap: 50px;
     }
   }
 </style>
